--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@auth/prisma-adapter": "^2.10.0",
     "@vercel/postgres": "^0.8.0",
     "autoprefixer": "^10.4.19",
+    "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.0",
     "lucide-react": "^0.543.0",
     "next": "^14.2.5",
-    "next-auth": "^4.24.11",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
@@ -23,6 +23,7 @@
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/react": "^19.1.12",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.2.5",
